--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,7 +5,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/groovy"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/groovy"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="ndex-task-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ndex-task/ndex-task">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="ndex-common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ndex-common/ndex-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
